--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@cloudflare/workers-types": "^4.20250510.0",
+		"prisma": "^6.7.0",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^4.14.4"
+	},
+	"dependencies": {
+		"@prisma/adapter-d1": "^6.7.0",
+		"@prisma/client": "^6.7.0"
 	}
 }
