--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "my-first-worker",
+	"name": "cfworkers",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-05-10",
 	"observability": {
